--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
 		<!-- Scripts here. Don't remove ↓ -->
 		<script src="node_modules/angular/angular.min.js"></script>
 		<script src="node_modules/angular-route/angular-route.min.js"></script>
+		<script src="js/controller/main.js"></script>
 		<script src="js/app.js"></script>
 	</body>
 </html>
